# ai_tips

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  LICENSE  PROJECT_STATUS.md  QUICK_START.md  README.md  SECURITY.md  docker-compose.yml  pyproject.toml  requirements.txt
.github/: PULL_REQUEST_TEMPLATE.md  markdown-link-check-config.json
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  documentation.md  feature_request.md
.github/workflows/: ci.yml  lint.yml  release.yml
docs/: GLOSSARY.md  MODEL_COMPARISON.md  PROFESSIONAL_OVERVIEW.md  UNDERSTANDING_AGENTS.md  VISUAL_GUIDE.md
docs/models/: AI_MODEL_SELECTION_GUIDE.md  AUDIO.md  CLIP.md  DIFFUSION.md  EMBEDDINGS.md  ENCODER_DECODER.md  GAN.md  GNN.md  LAM.md  LLM.md  LMM.md  LVM.md  MLM.md  MOE.md  RAG.md  RL.md  SAM.md  SLM.md  VAE.md  VIDEO.md  VIT.md  VLM.md  WORLD_MODELS.md
docs/protocols/: A2A.md  A2P.md  A2S.md  MCP.md  MLOPS.md  ORCHESTRATION.md  WORKFLOWS.md
examples/: README.md
examples/communication/: mcp_implementation.py  multi_model_pipeline.py  requirements.txt
examples/use-cases/: README.md
examples/use-cases/business_intelligence/: README.md  business_intelligence_agents.py  requirements.txt
examples/use-cases/customer_service/: README.md  customer_service_agents.py  requirements.txt
examples/use-cases/it_operations/: README.md  it_operations_automation.py  requirements.txt
examples/use-cases/manager_assistant/: README.md  manager_assistant.py  requirements.txt
examples/use-cases/market_intelligence/: README.md  market_intelligence_agents.py  requirements.txt
monitoring/: prometheus.yml
notebooks/: 00_Index.ipynb  01_LLM_Examples.ipynb  02_VLM_Examples.ipynb  03_SLM_Examples.ipynb  04_Advanced_Models_MOE_SAM_LCM_MLM.ipynb  05_Multimodal_And_Communication.ipynb
requirements/: core.txt  dev.txt  examples.txt  full.txt  minimal.txt
tests/: __init__.py  conftest.py  test_documentation.py  test_examples.py  test_imports.py
